icons spacing fix

--- a/src/Header/Header.component.sass
+++ b/src/Header/Header.component.sass
@@ -7,7 +7,6 @@
 .icons
     display: flex
     justify-content: space-around
-    flex-direction: row
 
 .img-icons
     height: 720px
@@ -16,10 +15,6 @@
 .img
    width: 444.88px
    height: 618px
-
-.icons-spacing
-    display: flex
-    justify-content: flex-end
 
 .header-name
     display: flex
